crates/cyrus-core/tests/ui/fail/pos_macro_infinity.stderr
error[E0080]: evaluation panicked: f64_pos! requires finite positive value
 --> tests/ui/fail/pos_macro_infinity.rs:9:14
  |
9 |     let _x = f64_pos!(f64::INFINITY);
  |              ^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `main::_` failed here
  |
  = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `f64_pos` (in Nightly builds, run with -Z macro-backtrace for more info)
